# cat

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  __main.cpp  build.sh  cattest  get_code_coverage.sh  linux_circleci_install.sh  linux_install.sh  linux_install_dependencies.sh  osx_install.sh  osx_install_dependencies.sh  run_test_output.sh  script.sh  test_runner.sh  travis_script.sh
.circleci/: config.yml
cmake/: llvm.txt
src/: CMakeLists.txt  main.cpp
src/cat/: entity.hpp  modifier.hpp  type.hpp
src/cat/entity/: class_entity.hpp  entity.hpp  entity_modifiers.hpp  function_entity.hpp  function_signature.hpp  interface_entity.hpp  type_entity.hpp  variable_entity.hpp
src/generator/: code_generator.hpp  llvm.hpp
src/log/: logger.hpp
src/output/: formatter.hpp  logger.hpp  printer.hpp  styler.hpp
src/syntax/: ast.hpp  ast_visitors.hpp  exceptions.hpp  keyword.hpp  lexer.hpp  operators.hpp  parser.hpp  pch.hpp  preprocessor.hpp  scope.cpp  scope.hpp  std.hpp  token.hpp  token_type.hpp
src/syntax/ast/: ast_arithmetic.cpp  ast_arithmetic.hpp  ast_arm.cpp  ast_arm.hpp  ast_assembly.cpp  ast_assembly.hpp  ast_binary_operator.cpp  ast_binary_operator.hpp  ast_block.cpp  ast_block.hpp  ast_conditional.cpp  ast_conditional.hpp  ast_expression.cpp  ast_expression.hpp  ast_for.cpp  ast_for.hpp  ast_function.cpp  ast_function.hpp  ast_function_call.cpp  ast_function_call.hpp  ast_function_prototype.cpp  ast_function_prototype.hpp  ast_if.cpp  ast_if.hpp  ast_match.cpp  ast_match.hpp  ast_meta_class.cpp  ast_meta_class.hpp  ast_meta_interface.cpp  ast_meta_interface.hpp  ast_node.cpp  ast_node.hpp  ast_pattern.cpp  ast_pattern.hpp  ast_program.cpp  ast_program.hpp  ast_range.cpp  ast_range.hpp  ast_return.cpp  ast_return.hpp  (+16 more)
src/syntax/ast/type/: ast_bool.hpp  ast_byte.hpp  ast_char.hpp  ast_flt32.hpp  ast_flt64.hpp  ast_int16.hpp  ast_int32.hpp  ast_int64.hpp  ast_int8.hpp  ast_uchar.hpp  ast_uint16.hpp  ast_uint32.hpp  ast_uint64.hpp  ast_uint8.hpp
src/syntax/visitor/: ast_visitor.hpp  code_generator_visitor.cpp  code_generator_visitor.hpp  type_visitor.hpp
src/utility/: cache.hpp  enum.hpp  exports.hpp
tst/: CMakeLists.txt  __main.cpp  basic_main.cat  cache.cpp  class_main.cat  code_generator_visitor.cpp  intermediate_main.cat  lexer.cpp  logger.cpp  parser.cpp  styler.cpp  token.cpp
